--- a/css/index.css
+++ b/css/index.css
@@ -119,7 +119,7 @@ header .logo {
     border: 1px double black;
     font-size: 16px;
     background: white;
-    width: 170px;
+    max-width: 170px;
     height: 32px;
     margin-top: 10px;
     cursor: pointer;
@@ -129,6 +129,8 @@ header .logo {
     background: black;
     color: white;
 }
+
+
 
 /* Main Content Styles */
 
@@ -146,7 +148,7 @@ header .logo {
 }
 
 .main-content .middle-img {
-    display: block;
+    display: flex;
     margin: 30px auto;
 }
 
@@ -198,7 +200,7 @@ footer {
 .services-content .card {
     padding: 20px;
     border: 1px solid black;
-    width: 420px;
+    max-width: 420px;
     background: whitesmoke;
     margin: 20px 0;
 }
@@ -246,4 +248,63 @@ footer {
 .services-content .services-info .services-info-img {
   width: 420px;
   height: 300px;
+}
+
+@media (max-width: 800px) {
+    .container{
+        width: 95%;
+        display:flex;
+        flex-flow: column nowrap;
+
+    }
+    header{
+        width: 100%;
+        display: flex;
+        flex-flow: column-reverse wrap;
+        justify-content: center;
+        align-items: center;
+        align-content: space-evenly;
+    }
+    header nav{
+        display: flex;
+        justify-content: space-between;
+    }
+    header img{
+        padding: 0 60px 0 0;
+        width: 30%;
+        display: flex;
+    }
+    .cta{
+        width: 100%;
+        display: flex;
+        flex-flow: column wrap;
+        align-items: center;
+        margin: 50px 0 0 40px;
+    }
+    .cta button{
+        width: 60%;
+    }
+    .main-content{
+        display: flex;
+        flex-flow: column;
+        justify-content: center;
+        align-items: flex-start;
+        align-content: space-around;
+    }
+    .main-content img{
+        width: 100%;
+    }
+    .top-content{
+        display: flex;
+        justify-content: center;
+    }
+    .text-content{
+        display: flex;
+        flex-flow: column wrap;
+        justify-content: center;
+        align-items: flex-start;
+    }
+    .cta img {
+        display: none;
+    }
 }
