--- a/css/index.css
+++ b/css/index.css
@@ -251,12 +251,7 @@ footer {
 }
 
 @media (max-width: 800px) {
-    .container{
-        width: 95%;
-        display:flex;
-        flex-flow: column nowrap;
-
-    }
+   
     header{
         width: 100%;
         display: flex;
@@ -273,6 +268,12 @@ footer {
         padding: 0 60px 0 0;
         width: 30%;
         display: flex;
+    }
+    .container{
+        width: 95%;
+        display:flex;
+        flex-flow: column nowrap;
+
     }
     .cta{
         width: 100%;
@@ -306,5 +307,53 @@ footer {
     }
     .cta img {
         display: none;
+    }
+}
+@media(max-width:500px) {
+    header{
+        width: 100%;
+        display: flex;
+    }
+    header img{
+        width: 50%;
+    }
+    header nav{
+        width: 100%;
+        display: flex;
+        flex-flow: column nowrap;
+        justify-content: space-between;
+        align-items: center;
+    }
+    header nav a{
+        width: 100%;
+        display: flex;
+        justify-content: center;
+        border-top: 1px solid lightgrey;
+        border-bottom: 1px solid lightgrey;
+        padding: 20px;
+    }
+    .main-content{
+        margin: 20px;
+    }
+    .container{
+        width: 99%;
+        display: flex;
+        flex-flow:column nowrap;
+    }
+    .top-content{
+        display: flex;
+        flex-flow: column nowrap;
+        justify-content: space-between;
+    }
+    .bottom-content{
+            display: flex;
+            flex-flow: column nowrap;
+            justify-content: space-between;
+    }
+    .text-content{
+        margin-bottom: 60px;
+    }
+    .contact{
+        margin-left: 20px;
     }
 }
